--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.25.0
-numpy>=1.20.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-plotly>=5.8.0
-opencv-python>=4.5.5
-Pillow>=9.0.0
-onnxruntime>=1.10.0
+streamlit==1.30.0
+numpy==1.25.2
+pandas==2.0.3
+matplotlib==3.7.2
+plotly==5.18.0
+opencv-python-headless==4.8.1.78
+Pillow==10.0.0
+onnxruntime==1.15.1
