--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.30.0
-numpy
-pandas
-matplotlib
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
 plotly==5.18.0
 opencv-python-headless==4.8.1.78
-Pillow
-onnxruntime-gpu
+Pillow==10.0.0
+onnxruntime==1.15.1
