--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -24,7 +24,8 @@ level="warning"
 [client]
 toolbarMode="minimal"
 showErrorDetails=false
-
+# Ocultar la barra de progreso (línea naranja)
+showSidebarNavigation=false
 displayEnabled=false
 
 [global]
@@ -33,3 +34,4 @@ dataFrameSerialization="arrow"
 # Desactivar elementos de la interfaz de usuario
 [ui]
 hideTopBar=true  # Oculta la barra superior completa
+hideSidebarNav=true  # Oculta la navegación de la barra lateral
